welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var x:Int=0
^Poucet:5: error: ')' expected but ';' found.
		if (croisement();) { if (x<=2) {droite}; if (x=>3) {gauche();}
                                ^Poucet:5: error: illegal start of statement
		if (croisement();) { if (x<=2) {droite}; if (x=>3) {gauche();}
                                 ^Poucet:10: error: 'while' expected but '}' found.
}
^